--- a/celerev/style.css
+++ b/celerev/style.css
@@ -1802,7 +1802,7 @@ li.pingback.bypostauthor:before {
 .social-media-icons a:hover .fas,
 .social-media-icons a:hover .far,
 .social-media-icons a:hover .fab {
-  color: white;
+  color: white !important;
 }
 .social-media-icons a:hover:after, .social-media-icons a:active:after, .social-media-icons a:focus:after {
   -webkit-transform: scale(1);
